# SearchEngineApp

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt  index.cpp  index.h  search.cpp  search.h
tests/: CMakeLists.txt  search_test.cpp
